# provenance-feed

./: .editorconfig  .env.example  .gitignore  README.md  package.json
.github/: instructions.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/backend/data/: feed.db
backend/src/provenance_feed/: __init__.py  config.py  main.py
backend/src/provenance_feed/api/: __init__.py  app.py  deps.py  schemas.py
backend/src/provenance_feed/api/routes/: feed.py
backend/src/provenance_feed/domain/: __init__.py  identifiers.py  models.py
backend/src/provenance_feed/ingestion/: __init__.py  mock_source.py  real_sources.py  rss_common.py  run.py  service.py
backend/src/provenance_feed/ingestion/rss_sources/: __init__.py  bbc.py  brookings.py  eff.py  guardian.py  nasa.py  npr.py  reliefweb.py
backend/src/provenance_feed/persistence/: repository.py  sqlite.py
backend/src/provenance_feed/provenance_graph/: observer.py
backend/tests/: test_api_feed.py  test_identifiers.py  test_ingest_observe.py  test_repository_sqlite.py  test_rss_parsing.py
backend/tests/fixtures/: html_no_image.html  html_with_og_image.html  rss_no_media.xml  rss_with_media.xml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: FeedItemCard.tsx
