[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "provenance-feed"
version = "0.1.0"
description = "Minimal content feed (consumer surface)"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_feed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["provenance_feed"]

[tool.ruff.lint.per-file-ignores]
"src/provenance_feed/api/routes/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
